# DB_Accommodation_Avantio

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: main.py
src/API_Data/: create_apt_caract.py  fetch_accomodations.py  get_accomodation.py  get_accomodations_dsp.py
src/Database/: commit_to_db.py  database.py  models.py
