[tool.poetry]
name = "bd-acomodacao"
version = "0.1.0"
description = ""
authors = ["AngeloGagno <angelogagno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.32.3"
python-dotenv = "1.0.1"
sqlalchemy = "2.0.36"
psycopg2-binary = "2.9.10"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
greenlet = "3.1.1"
idna = "3.10"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
